# brewops

./: .gitignore  CLAUDE.md  DEMO.md  README.md  pyproject.toml  skills-lock.json
.claude/skills/add-drink-type/: SKILL.md
.claude/skills/grill-me/: SKILL.md
.devcontainer/: devcontainer.json
data/inbox/: brews_bertha_2026-04.csv  brews_bertha_2026-05.csv  brews_bertha_2026-06.csv  brews_bertha_2026-07.csv  brews_intern_2026-04.csv  brews_intern_2026-05.csv  brews_intern_2026-06.csv  brews_intern_2026-07.csv  brews_rocket_2026-04.csv  brews_rocket_2026-05.csv  brews_rocket_2026-06.csv  brews_rocket_2026-07.csv  maintenance_2026-04.csv  maintenance_2026-05.csv  maintenance_2026-06.csv  maintenance_2026-07.csv  manual_old-faithful_log.csv
docs/architecture/: api-layer.md  database.md  design-decisions.md  frontend.md  ingest-pipeline.md  internals.md  overview.md  request-lifecycle.md
docs/data-model/: drink-types.md  machines.md  schema.md  timestamps.md
docs/operations/: configuration.md  runbook.md  running.md  seeding-and-ingest.md  troubleshooting.md
docs/reference/: api-endpoints.md  cli.md  csv-formats.md  data-dictionary.md  faq.md  glossary.md  stats-and-health.md  testing.md  validation-rules.md
scripts/: lab_a_check.py  setup_check.py
src/brewops/: __init__.py
src/brewops/api/: main.py
src/brewops/db/: queries.py  (+2 more)
tests/: asgi_client.py  test_api.py  test_db.py  test_frontend.py  test_ingest.py
tickets/: 001-error-code-alerting.md  002-csv-export.md  003-descaling-warning.md  004-json-telemetry.md  005-date-filter.md  006-lobby-dashboard.md
(+5 files in other folders)
