[project]
name = "brewops"
version = "0.1.0"
description = "Telemetry and operations for the office coffee machines"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
start = "brewops.api.main:run"
ingest = "brewops.ingest.cli:main_entry"
seed = "brewops.ingest.cli:seed_entry"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"
